--- a/web/auth-demo/package.json
+++ b/web/auth-demo/package.json
@@ -6,6 +6,7 @@
     "aws-amplify": "1.1.32",
     "aws-amplify-react": "^2.4.4",
     "axios": "^0.19.0",
+    "handlebars": "^4.5.3",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-loadable": "^5.5.0",
